--- a/series.conf
+++ b/series.conf
@@ -1298,6 +1298,7 @@
 	# bsc#1019851, CVE-2017-2584
 	patches.fixes/kvm-x86-introduce-segmented_write_std
 	# bsc#1020602, CVE-2017-2583
+	patches.fixes/kvm-x86-fix-emulation-of-mov-ss-null-selector
 
 	# bsc#1022785 - VUL-1: CVE-2017-2596: kernel-source: kvm:page reference leakage in handle_vmon
 	patches.fixes/kvm-fix-page-struct-leak-in-handle_vmon
