--- a/series.conf
+++ b/series.conf
@@ -603,6 +603,7 @@
 	patches.fixes/tcp-take-care-of-truncations-done-by-sk_filter.patch
 	patches.fixes/ip6_gre-fix-ip6gre_err-invalid-reads.patch
 	patches.fixes/ipv4-keep-skb-dst-around-in-presence-of-IP-options.patch
+	patches.fixes/sctp-avoid-BUG_ON-on-sctp_wait_for_sndbuf.patch
 
 	########################################################
 	# Netfilter
