kvm: fix page struct leak in handle_vmon (CVE-2017-2596 bsc#1022785).

--- a/series.conf
+++ b/series.conf
@@ -1295,6 +1295,9 @@
 	# bsc#1013038 CVE-2016-9756
 	patches.fixes/kvm-x86-drop-error-recovery-in-em_jmp_far-and-em_ret_far.patch
 
+	# bsc#1022785 - VUL-1: CVE-2017-2596: kernel-source: kvm:page reference leakage in handle_vmon
+	patches.fixes/kvm-fix-page-struct-leak-in-handle_vmon
+
         ########################################################
 	# Staging tree patches
 	# new drivers that are going upstream
